# Bitdaytrader

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
config/: settings.py
dashboard/: index.html
data/memory/: events.md  insights.md  rules.md  self_reflection.md
deploy/: README.md  bitdaytrader-agent.service  bitdaytrader.service  gmo-trader-api.service  gmo-trader.service  install.sh  prometheus.yml
docs/: ARCHITECTURE.md  GMO_API_REFERENCE.md  PREDICTION_MODEL.md  PROJECT_STRUCTURE.md  RESOURCE_OPTIMIZATION.md  TECH_STACK.md  TRADING_STRATEGY.md
scripts/: fetch_data.py  run_backtest.py  run_bot.py  run_daemon.py  run_dashboard.py  test_integration.py  train_model.py
src/: __init__.py  main.py
src/agent/: __init__.py  action.py  claude_client.py  core.py  decision.py  long_term_memory.py  main.py  memory.py  perception.py  schedule.py
src/api/: __init__.py  gmo_client.py  main.py
src/backup/: __init__.py  manager.py
src/core/: __init__.py  engine.py  safety.py
src/database/: __init__.py  models.py
src/execution/: __init__.py  order_manager.py  paper_executor.py
src/features/: __init__.py  calculator.py  registry.py
src/metrics/: __init__.py  collector.py
src/models/: __init__.py  predictor.py
src/reports/: generator.py
src/risk/: __init__.py  manager.py
src/settings/: runtime.py
src/tax/: __init__.py  calculator.py
src/telegram/: __init__.py  bot.py  commands.py
src/utils/: __init__.py  timezone.py
tests/: __init__.py  conftest.py  test_api_retry.py  test_backup.py  test_metrics.py  test_risk_manager.py
training/: __init__.py  retrainer.py  trainer.py
