[project]
name = "bitdaytrader"
version = "0.1.0"
description = "GMO Coin Day Trading System with LightGBM Prediction and Human Approval"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["trading", "cryptocurrency", "gmo-coin", "lightgbm", "telegram-bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # API Client
    "httpx>=0.26.0",

    # Data Processing (軽量版)
    "pandas>=2.1.0",
    "numpy>=1.26.0",

    # ML Models (LightGBMのみ)
    "lightgbm>=4.1.0",
    "joblib>=1.3.0",             # モデル保存

    # Database (SQLite利用、軽量)
    "sqlalchemy>=2.0.0",

    # Notifications & Human Approval
    "python-telegram-bot>=20.7",

    # Logging
    "loguru>=0.7.0",

    # Utilities
    "psutil>=5.9.0",             # リソース監視
]

[project.optional-dependencies]
# 開発用
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "pre-commit>=3.6.0",
    "ipython>=8.18.0",
]

# モデル学習用（ローカルPCで使用）
training = [
    "scikit-learn>=1.3.0",       # walk-forward validation
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
]

# ダッシュボード（オプション、メモリ余裕がある時のみ）
dashboard = [
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/bitdaytrader"
Documentation = "https://github.com/yourusername/bitdaytrader#readme"
Repository = "https://github.com/yourusername/bitdaytrader"

[project.scripts]
bitdaytrader = "scripts.run_bot:main"
bitdaytrader-backtest = "scripts.run_backtest:main"
bitdaytrader-dashboard = "scripts.run_dashboard:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "dashboard*", "alerts*", "scripts*"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src", "config", "dashboard", "alerts"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "lightgbm.*",
    "sklearn.*",
    "streamlit.*",
    "plotly.*",
    "telegram.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
